Final Fix: Adding psycopg2-binary for PostgreSQL driver

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask
 Flask-SQLAlchemy
 Flask-Login
 Flask-SocketIO
-Flask-Babel 
+Flask-Babel
 python-dotenv
 Werkzeug
 gunicorn
@@ -10,3 +10,4 @@ eventlet
 pytz
 pyotp
 qrcode
+psycopg2-binary
