--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,37 @@
-Flask
-Flask-SQLAlchemy
-Flask-Login
-Flask-SocketIO
-Flask-Babel
-python-dotenv
-Werkzeug
-gunicorn
-eventlet
-pytz
-pyotp
-qrcode
-psycopg2-binary
+alembic==1.17.0
+babel==2.17.0
+bcrypt==5.0.0
+bidict==0.23.1
+blinker==1.9.0
+click==8.3.0
+colorama==0.4.6
+dnspython==2.8.0
+eventlet==0.40.3
+Flask==3.1.2
+flask-babel==4.0.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.1.0
+Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+gunicorn==23.0.0
+h11==0.16.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.3
+packaging==25.0
+pillow==11.3.0
+pyotp==2.9.0
+python-dotenv==1.1.1
+python-engineio==4.12.3
+python-socketio==5.14.1
+pytz==2025.2
+qrcode==8.2
+simple-websocket==1.1.0
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
+Werkzeug==3.1.3
+wsproto==1.2.0
