--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 frozenlist==1.8.0
+git-filter-repo==2.47.0
 greenlet==3.2.4
 gunicorn==23.0.0
 h11==0.16.0
@@ -44,6 +45,7 @@ ordered-set==4.1.0
 packaging==25.0
 pillow==11.3.0
 propcache==0.4.1
+psycopg2-binary==2.9.11
 Pygments==2.19.2
 PyJWT==2.10.1
 pyotp==2.9.0
